--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ collections:
   - misc
 
 # Name of your site (displayed in the header)
-name: Yves-Marie Plard
+name: Yves Marie Plard
 
 # Name of the author
-author: Yves-Marie Plard
+author: Yves Marie Plard
 
 # Short bio or description (displayed in the header)
 description: Experienced French engineer with 6+ years in Power, Software & Healthcare industries.
