--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author: Yves Marie Plard
 description: Experienced French engineer with 6+ years in Power, Software & Healthcare industries.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/yves marie plard.png
+avatar: /images/profile.png
 
 #
 # Flags below are optional
