--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ footer-links:
   flickr:
   github: yvesmarieplard
   instagram:
-  linkedin: yvesmarieplard
+  linkedin: www.linkedin.com/in/yves-marie-plard-741866114
   pinterest:
   rss: rss
   twitter: 
